@@ -186,6 +186,8 @@ thru keys panel (F8).
 * If git not installed do not show error.
 Just propose install git and clone from github repo.
 
+* Fixed bug with client.js minifying.
+
 
 2012.10.01, Version 0.1.7
 
